GH-124 Implement basics of LiteCommands. (#124)
* Implement basics of LiteCommands.

* Changes

* Implement warp command. Add lombok.

* Add CHANGELOGS.md. Improve /tp command.

* Fix

* Add SocialSpyCommand

* Fix spy

* Start of database implementation

* Add /sun /day /night

* Revert db

* fix helpop

* Implement database

* Add /home /sethome /delhome and Add option to send random message on join and leave

* Fix package name

* Delete Fastboard and bump dependencies

* Add AFK domain and /afk command. Handle database critical error. Add CacheRepository.

* Add /ignore and unignore. Add Publish system. Add /back command. Add Position wrapper for location.

* Implementation of Position and some moves and cleanup

* Changed  LETTER SIZE for variables

* Changed LETTER SIZE for variables

* Add private chat messages controller.

* Add item lore.

* composers -> composer

* implementations -> implementation

* Fix other dependencies usages section in readme

* Remove copy

* Remove useless test

* Add "this" in missing places

* Typo fix in polish language

* Fix afk leave bug.

* Add ItemFlag

* Fix db. Typo with ItemFlagCommand.

* Fix typo and other naming issues

* Bumo litecommands

* Fix warp and teleport required.

Co-authored-by: vLuckyDev <vluckyyy.biznes@gmail.com>
Co-authored-by: Osnixer <Osnixeroo@gmail.com>